<resources>
    <string name="app_name">Shred It</string>
    <string name="nav_open">Open Navigation Bar</string>
    <string name="nav_close">Close Navigation Bar</string>
    <string name="item_removed_message">Content Removed</string>
    <string name="undo">Undo</string>
    <string name="dialog_title_auth">Authentication</string>
    <string name="dialog_msg_auth">Please authenticate the device</string>
    <string name="Title">Shred It</string>
    <string name="sub_title">Secure Erase Files Forever!</string>

    <string name="shredF">Shred Files</string>
    <string name="shredD">Shred Directories</string>
    <string name="shredEs">Shred External Storage</string>
    <string name="shredIs">Shred Internal Storage</string>
    <string name="shredFRs">Shred Fress Space</string>
    <string name="chkspace">Check Fress Space</string>
    <string name="credits">Rizwan Akhwandzada</string>

    <!--    Image descriptions  -->

    <string name="logo">Logo of the App</string>
    <string name="shred_file">Press for Shredding files</string>
    <string name="shred_dir">Press for Shredding Directories</string>
    <string name="shred_FRs">Press for Shredding Free Space</string>
    <string name="shred_IS">Press for Shredding Internal Storage</string>
    <string name="shred_ES">Press for Shredding External Storage</string>
    <string name="check_Fs">Check Free Space</string>
    <string name="one_byte">One Byte</string>

    <!-- Algorithms Names  -->

    <string name="gutman">Gutman 35 Pass</string>
    <string name="VSITR">German VSITR</string>
    <string name="schneire">Schneire</string>
    <string name="DoD">US DoD</string>
    <string name="DoD_Ext">DoD Extended</string>
    <string name="shredding_btn">Start Shredding</string>

    <!--  Algorithms' Description  -->

    <string name="des_one_byte"><b><u>One Byte:</u></b>
        Use this method to overwrite a file only once with <i>random secure</i> bytes. It is fast
    but less secure.</string>
    <string name="des_VSITR"><b><u>German VSITR:</u></b>
        <i>German Federal Office for IT Security</i> uses this method. Employ this method to overwrtie
        a file with secure bytes 7 times and an additional random byte pass. Secure but slower</string>
    <string name="des_gutman"><b><u>Peter Gutman:</u></b>
        <i>35 Pass Algorithm.</i> File will undergo 4 random,27 pattern and
    finally, 4 additional random passes. Securest of them all but also the slowest. Do not use this
    unless very very cautious about the data. it will take a lot of time to finish.</string>
    <string name="des_schneier"><b><u>Bruce Schneier:</u></b>
        File will undergo 2 pattern and 5 additional random passes. </string>
    <string name="des_DoD"><b><u><i>Standard</i> US DoD:</u></b>
        Standard US department of defense 520.22-M (E) algorithm. Secure erase the file by overwriting
    it by 3 random passes. US DoD erases their digital data using this algorithm</string>
    <string name="des_DoD_ext"><b><u><i>Extended</i> US DoD:</u></b>
        Extended US department of defense 520.22-M (ECE) algorithm. Secure erase the file by overwriting
    it by 3 random passes and 4 pattern passes. US DoD erases their digital data using this algorithm</string>

    <!-- App's Meta -->
    <string name="email">rizwan.akhwandzada@gmail.com</string>
    <string name="appName">SHRED IT</string>
    <string name="appSubtitle">for Android</string>
    <string name="version">Version 1.0</string>
    <string name="tagLine">Shredd It is a free software</string>

    <!--  Developer's Details  -->
    <string name="devName">Rizwan Ullah</string>
    <string name="comp">Code Protocol</string>
    <string name="Email">@string/email</string>
    <string name="linkedIn"><a href="https://www.linkedin.com/in/rizwan-ullah-b1b44aa7/">Rizwan Ullah</a></string>
    <string name="whatsapp">+923122077722</string>
    <string name="rights">Copy Right @2020 - Code Protocol. All Rights Reserved</string>
</resources>
