<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen_bgColor"
    android:fitsSystemWindows="true"
    tools:context=".About">


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawer_menu">

    </com.google.android.material.navigation.NavigationView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="15">

        <LinearLayout
            android:id="@+id/mycontainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1"
            android:orientation="horizontal">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"></include>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:gravity="center_horizontal"
            android:text="@string/appName"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:text="@string/appSubtitle"
            android:textColor="@color/full_black"
            android:textSize="12sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:text="@string/version"
            android:textColor="@color/full_black"
            android:textSize="12sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:text="@string/tagLine"
            android:textColor="@color/Title_Black"
            android:textSize="12sp"
            android:textStyle="bold"></TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.8"></View>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.8"
            android:src="@drawable/developer"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:text="@string/devName"
            android:textColor="@color/Title_Black"
            android:textSize="12sp"
            android:textStyle="bold"></TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.8"
            android:src="@drawable/linkedin"></ImageView>

        <TextView
            android:id="@+id/linkedin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:linksClickable="true"
            android:text="@string/linkedIn"
            android:textColor="@color/Title_Black"
            android:textSize="12sp"
            android:textStyle="bold"></TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.8"
            android:src="@drawable/email"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:text="@string/email"
            android:textColor="@color/Title_Black"
            android:textSize="12sp"
            android:textStyle="bold"></TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.8"
            android:src="@drawable/whatsapp"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:text="@string/whatsapp"
            android:textColor="@color/Title_Black"
            android:textSize="12sp"
            android:textStyle="bold"></TextView>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:gravity="center_horizontal"
            android:text="@string/comp"
            android:textColor="@color/Title_Black"
            android:textSize="15sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:gravity="center_horizontal"
            android:text="@string/rights"
            android:textColor="@color/Title_Black"
            android:textSize="15sp"
            android:textStyle="bold"></TextView>

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>