<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen_bgColor"
    android:fitsSystemWindows="true"
    tools:context=".Help">


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawer_menu">

    </com.google.android.material.navigation.NavigationView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="15">

        <LinearLayout
            android:id="@+id/mycontainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1"
            android:orientation="horizontal">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"></include>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="13.9"
            android:orientation="vertical"
            android:weightSum="13.9">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/des_one_byte"
                android:textSize="15sp"></TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"></View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/des_gutman"
                android:textSize="15sp"></TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"></View>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/des_schneier"
                android:textSize="15sp"></TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"></View>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/des_VSITR"
                android:textSize="15sp"></TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"></View>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/des_DoD"
                android:textSize="15sp"></TextView>


            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"></View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/des_DoD_ext"
                android:textSize="15sp"></TextView>

        </LinearLayout>

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>