<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen_bgColor"
    android:fitsSystemWindows="true"
    tools:context=".Homescreen">
    <!--    tools:openDrawer="start"-->

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawer_menu">

    </com.google.android.material.navigation.NavigationView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mycontainer"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"></include>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="14.1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/logo73x73">

                </ImageView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Title"
                        android:textColor="@color/Title_Black"
                        android:textSize="25sp"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_title"
                        android:textColor="@color/sub_title"
                        android:textSize="15sp"
                        android:textStyle="bold"></TextView>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3.3"
                android:orientation="horizontal"
                android:weightSum="12.3">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"></View>

                <LinearLayout
                    style="@android:style/Widget.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5.5"
                    android:background="@drawable/btnshape"
                    android:onClick="pickFile"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/shred_file"
                        android:src="@drawable/shredfiles"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/shredF"
                        android:textColor="@color/Title_Black"
                        android:textSize="@dimen/activity_horizontal_margin"
                        android:textStyle="bold">

                    </TextView>
                </LinearLayout>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"></View>

                <LinearLayout
                    style="@android:style/Widget.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5.5"
                    android:onClick="pickDir"
                    android:background="@drawable/btnshape"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/shred_dir"
                        android:src="@drawable/shreddirectories"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/shredD"
                        android:textColor="@color/Title_Black"
                        android:textSize="@dimen/activity_horizontal_margin"
                        android:textStyle="bold">

                    </TextView>
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4">

                </View>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"></View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3.3"
                android:orientation="horizontal"
                android:weightSum="12.3">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"></View>

                <LinearLayout
                    style="@android:style/Widget.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5.5"
                    android:background="@drawable/btnshape"
                    android:onClick="ShredInternalFreeSpace"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/shred_FRs"
                        android:src="@drawable/shredfreespace"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/shredFRs"
                        android:textColor="@color/Title_Black"
                        android:textSize="@dimen/activity_horizontal_margin"
                        android:textStyle="bold">

                    </TextView>
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"></View>

                <LinearLayout
                    style="@android:style/Widget.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5.5"
                    android:background="@drawable/btnshape"
                    android:onClick="shredInternal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/shred_IS"
                        android:src="@drawable/shredinternal"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/shredIs"
                        android:textColor="@color/Title_Black"
                        android:textSize="@dimen/activity_horizontal_margin"
                        android:textStyle="bold">

                    </TextView>
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4">

                </View>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3.3"
                android:orientation="horizontal"
                android:weightSum="12.3">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"></View>

                <LinearLayout
                    style="@android:style/Widget.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5.5"
                    android:background="@drawable/btnshape"
                    android:onClick="spaceCheck"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/check_Fs"
                        android:src="@drawable/chkfreesp"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/chkspace"
                        android:textColor="@color/Title_Black"
                        android:textSize="@dimen/activity_horizontal_margin"
                        android:textStyle="bold">

                    </TextView>
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"></View>

                <LinearLayout
                    style="@android:style/Widget.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5.5"
                    android:background="@drawable/btnshape"
                    android:onClick="shredRemovable"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/shred_ES"
                        android:src="@drawable/externalstorage"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/shredEs"
                        android:textColor="@color/Title_Black"
                        android:textSize="@dimen/activity_horizontal_margin"
                        android:textStyle="bold">

                    </TextView>
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4">

                </View>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"></View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.2"
                android:gravity="center_horizontal|bottom"
                android:text="@string/credits"
                android:textColor="@color/actionModeToolbar"
                android:textSize="15sp"
                android:textStyle="bold">

            </TextView>
        </LinearLayout>
    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>